fix vote count overflowing and being hidden

--- a/static/style.css
+++ b/static/style.css
@@ -303,7 +303,8 @@ a.more:before {
 
 .contest .votes {
     font-size: 0.7em;
-    padding-left: 5px;
+    margin: 5px 10px;
+    float:right;
 }
 
 /** Lists *********************************************************************/
